# dots

./: .bashrc  .xinitrc  .xprofile  readme.md
.config/: invert_scroll.sh  picom.conf  readme.md  screenshot.sh
.config/alacritty/: alacritty.yml
.config/eww/: common.yuck  eww.scss  eww.yuck  ics.json  ics.yuck  spotify.yuck  start.sh  sys.yuck  workspaces.yuck
.config/eww/scripts/: batt  ic-cache  jqutil  system  workspaces
.config/eww/scripts/playerctl_spot/: .gitignore  Cargo.toml
.config/eww/scripts/playerctl_spot/src/: main.rs
.config/fish/: config.fish
.config/fish/functions/: :q.fish  add_to_user_path.fish  ranger.fish  rep.fish  terminal_colors.fish
.config/i3/: config  i3_notifier_config.py
.config/nvim/: coc-settings.json  init.lua  init.vim
.config/nvim/lua/: neovide.lua  oldwomanjosiah.lua
.config/nvim/lua/oldwomanjosiah/: cmp.lua  lsp.lua  lualine.lua  mappings.lua  nvim-tree.lua  nvim_dap.lua  project.lua  telescope.lua  toggleterm.lua  treesitter.lua  util.lua
.config/nvim/lua/oldwomanjosiah/util/: colorscheme.lua  iters.lua
.config/polybar/: config  config.multi.old  config.old  config.single.old  launch.sh  playing.sh
.config/rofi/: center.rasi  config.rasi  edge-colorscheme.rasi  gruv-colorscheme-light.rasi  gruv-colorscheme.rasi  left.rasi  lower.rasi  mag-colorscheme.rasi  pink-colorscheme.rasi  upper.rasi
.config/stalonetray/: map.sh  rc  start.sh  unmap.sh
