[package]
name = "playerctl_spot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
regex = "1.6"
reqwest = { version = "0.11" }
tokio = { version = "1", features = [ "full" ] }
futures = "0.3"
async-stream = "0.3"
once_cell = "1.15"
