[package]
name = "playerctl_spot"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
regex = "1.6"
reqwest = { version = "0.11" }
tokio = { version = "1", features = [ "full" ] }
futures = "0.3"
async-stream = "0.3"
once_cell = "1.15"

tracing = "0.1"
tracing-futures = { version = "0.2", features = [ "futures-03" ] }
tracing-subscriber = { version = "0.3", features = [ "fmt", "env-filter" ] }

anyhow = { version = "1.0", features = [ "backtrace" ] }
